api register metida en swagger
